Interim 146 - IE fix for megapanels (#162)
* INTERIM-146

Fixed the flex shorthand property to work better with IE 11.

* INTERIM-146 Adjusted the media query because the flex shorthand wasn't catching a strange in between browser width for rows of three items.

--- a/css/suitcase.css
+++ b/css/suitcase.css
@@ -1477,7 +1477,7 @@ in the panel settings */
     }
 
 .megapanels-pane {
-    flex: 1 1 250px;
+    flex: 1 1 0px;
     min-width: 250px;
     margin: 0 0.5rem;
     margin-bottom: 1rem;
@@ -1510,7 +1510,7 @@ in the panel settings */
     } 
 }
 
-@media (max-width: 829px) and (min-width: 548px) {
+@media (max-width: 850px) and (min-width: 548px) {
 
     .megapanels-pane:first-child:nth-last-child(3),
     .megapanels-pane:first-child:nth-last-child(3) ~ .megapanels-pane {
